--- a/po/es/kpaint.po
+++ b/po/es/kpaint.po
@@ -1,73 +1,62 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: kdegraphics\n"
 "POT-Creation-Date: 1998-11-18 13:52+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: ENCODING\n"
+"PO-Revision-Date: 1998-12-07 23:43+0200\n"
+"Last-Translator: Alonso Lara <jlaram@nexo.es>\n"
+"Language-Team: Spanish <kde-es@kyb.ml.org>\n"
 
 #: areaselect.cpp:20
 msgid "Area Selection"
-msgstr ""
+msgstr "Selección de Area"
 
 #: canvassize.cpp:16
 msgid "Canvas Size"
 msgstr "Tamaño de lienzo"
 
 #: canvassize.cpp:25
-#, fuzzy
 msgid "Width:"
-msgstr "Ancho"
+msgstr "Ancho:"
 
 #: canvassize.cpp:26
-#, fuzzy
 msgid "Height:"
-msgstr "Alto"
+msgstr "Alto:"
 
 #: circle.cpp:18 circle.cpp:25 manager.cpp:67
 msgid "Circle"
 msgstr "Círculo"
 
 #: depthdialog.cpp:18
-#, fuzzy
 msgid "Image Depth:"
-msgstr "Ancho de imagen:"
+msgstr "Profundidad de imagen:"
 
 #: depthdialog.cpp:24
 msgid "1 (2 Colours)"
-msgstr ""
+msgstr "1 (2 Colores)"
 
 #: depthdialog.cpp:25
 msgid "4 (16 Colours)"
-msgstr ""
+msgstr "4 (16 Colores)"
 
 #: depthdialog.cpp:26
 msgid "8 (256 Colours)"
-msgstr ""
+msgstr "8 (256 Colores)"
 
 #: depthdialog.cpp:27
 msgid "15 (32k Colours)"
-msgstr ""
+msgstr "15 (32k Colores)"
 
 #: depthdialog.cpp:28
 msgid "16 (64k Colours)"
-msgstr ""
+msgstr "16 (64k colores)"
 
 #: depthdialog.cpp:29
 msgid "24 (True Colour)"
-msgstr ""
+msgstr "24 (Color Verdadero)"
 
 #: depthdialog.cpp:30
 msgid "32 (True Colour)"
-msgstr ""
+msgstr "32 (Color Verdadero)"
 
 #: ellipse.cpp:16 ellipse.cpp:23 manager.cpp:65
 msgid "Ellipse"
@@ -103,12 +92,13 @@ msgstr "sintitulo.gif"
 
 #: kpaint.cpp:172
 msgid "Unsaved Changes"
-msgstr ""
+msgstr "Cambios no guardados"
 
 #: kpaint.cpp:173
 msgid ""
 "You have unsaved changes, you will loose them if you close this window now."
 msgstr ""
+"No ha guardado los cambios, los perderá si cierra esta ventana ahora."
 
 #: kpaint.cpp:210
 msgid "New Canvas"
@@ -139,9 +129,8 @@ msgid "New Image..."
 msgstr "Nueva imagen"
 
 #: kpaint.cpp:432
-#, fuzzy
 msgid "Save Image"
-msgstr "Guardar imagen..."
+msgstr "Guardar imagen"
 
 #: kpaint.cpp:433
 msgid "Save Image As..."
@@ -193,7 +182,7 @@ msgstr "Información..."
 
 #: kpaint.cpp:456
 msgid "Resize..."
-msgstr ""
+msgstr "Cambiar tamaño..."
 
 #: kpaint.cpp:457
 msgid "Edit Palette..."
@@ -209,33 +198,31 @@ msgstr "Propiedades de herramienta"
 
 #: kpaint.cpp:482
 msgid "Show Tools Toolbar"
-msgstr ""
+msgstr "Mostrar Herramientas de la Barra de Herramientas"
 
 #: kpaint.cpp:483
 msgid "Show Commands Toolbar"
-msgstr ""
+msgstr "Mostrar Comandos de la Barra de Herramientas"
 
 #: kpaint.cpp:484
 msgid "Show Status Bar"
-msgstr ""
+msgstr "Mostrar Barra de Estado"
 
 #: kpaint.cpp:485
-#, fuzzy
 msgid "Save Options"
-msgstr "Opciones"
+msgstr "Guardar Opciones"
 
 #: kpaint.cpp:494
-#, fuzzy
 msgid "KPaint"
-msgstr "Acerca de KPaint"
+msgstr "KPaint"
 
 #: kpaint.cpp:495
 msgid " version "
-msgstr ""
+msgstr " versión "
 
 #: kpaint.cpp:496
 msgid "(c) "
-msgstr ""
+msgstr "(c) "
 
 #: kpaint.cpp:505
 msgid "&Image"
@@ -262,15 +249,14 @@ msgid "KPaint: Unknown Format"
 msgstr "KPaint: Formato desconocido"
 
 #: kpaint.cpp:691
-#, fuzzy
 msgid ""
 "Error: Unknown Format\n"
 "KPaint does not understand the format of the specified file\n"
 "or the file is corrupt."
 msgstr ""
 "Error: Formato desconocido\n"
-"KPaint no entiende el formato del fichero especificado, o bien éste está "
-"corrupto."
+"KPaint no entiende el formato del archivo especificado\n"
+"o el archivo está corrupto."
 
 #: line.cpp:19 manager.cpp:71
 msgid "Line"
@@ -286,19 +272,19 @@ msgstr "Rectángulo"
 
 #: manager.cpp:75
 msgid "Round Angle"
-msgstr ""
+msgstr "Angulo Redondo"
 
 #: manager.cpp:77 spraycan.cpp:19
 msgid "Spray Can"
-msgstr "Srpay"
+msgstr "Spray"
 
 #: manager.cpp:79
 msgid "Text"
-msgstr ""
+msgstr "Texto"
 
 #: manager.cpp:81
 msgid "Area Select"
-msgstr ""
+msgstr "Selección de Area"
 
 #: manager.cpp:88
 msgid "Tool Properties"
@@ -405,9 +391,8 @@ msgid "Set Line Colour..."
 msgstr "Ajustar color de línea"
 
 #: roundangle.cpp:19
-#, fuzzy
 msgid "Roundangle"
-msgstr "Rectángulo"
+msgstr "Angulo Redondo"
 
 #~ msgid ""
 #~ "\n"
@@ -422,9 +407,8 @@ msgstr "Rectángulo"
 #~ msgid " [url | filename]\n"
 #~ msgstr "[url | fichero]\n"
 
-#, fuzzy
 #~ msgid "Exit"
-#~ msgstr "&Editar"
+#~ msgstr "Salir"
 
 #~ msgid "Open Location:"
 #~ msgstr "Abrir URL:"
@@ -456,8 +440,7 @@ msgstr "Rectángulo"
 #~ msgstr "KPaint: Imposible encontrar KFM"
 
 #~ msgid "Error: KPaint could not find a running KFM or start one itself."
-#~ msgstr ""
-#~ "Error: KPaint no puede ejecutar ni encontrar ningún KFM en ejecución"
+#~ msgstr "Error: KPaint no puede encontrar un KFM en ejecución ni iniciar uno."
 
 #~ msgid "KPaint: Network Load Failed"
 #~ msgstr "KPaint: Error cargando de la red"
