--- a/po/ru/kdvi.po
+++ b/po/ru/kdvi.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: kdvi\n"
 "POT-Creation-Date: 1998-12-28 15:35+0100\n"
-"PO-Revision-Date: 1998-08-19 01:53+0600\n"
+"PO-Revision-Date: 1998-12-29 01:53+0600\n"
 "Last-Translator: Denis Pershin <dyp@inetlab.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -60,7 +60,7 @@ msgstr ""
 
 #: dviwin.cpp:423 dviwin.cpp:457
 msgid "HEY"
-msgstr ""
+msgstr "ЭЙ"
 
 #: dviwin.cpp:424 dviwin.cpp:458
 msgid "What's this? DVI problem!\n"
@@ -68,10 +68,9 @@ msgstr "Что это? Проблема DVI!\n"
 
 #: dviwin.cpp:508
 msgid "File status changed."
-msgstr ""
+msgstr "Изменен статус файла."
 
 #: dviwin.cpp:513 kdvi.cpp:937
-#, fuzzy
 msgid "File reloaded."
 msgstr "Файл перезагружен"
 
@@ -97,7 +96,7 @@ msgstr "Предпочтения..."
 
 #: kdvi.cpp:173
 msgid "&New"
-msgstr ""
+msgstr "Новый"
 
 #: kdvi.cpp:174
 msgid "&Open ..."
@@ -132,13 +131,12 @@ msgid "&Redraw page"
 msgstr "Перерисовать страницу"
 
 #: kdvi.cpp:203
-#, fuzzy
 msgid "&Previous"
-msgstr "Предыдущая страница"
+msgstr "Предыдущая"
 
 #: kdvi.cpp:204
 msgid "&Next"
-msgstr ""
+msgstr "Следующая"
 
 #: kdvi.cpp:205
 msgid "&First"
@@ -264,11 +262,11 @@ msgstr "Выделенную страницу и отмеченные страницы для печати"
 
 #: kdvi.cpp:323
 msgid "X:0000, Y:0000 "
-msgstr ""
+msgstr "X:0000, Y:0000 "
 
 #: kdvi.cpp:325
 msgid "Shrink: xx"
-msgstr ""
+msgstr "Уменьшение: xx"
 
 #: kdvi.cpp:327
 msgid "Page: xxxx / xxxx"
@@ -460,7 +458,7 @@ msgstr "Страница: "
 
 #: kdvi.cpp:874
 msgid " / "
-msgstr ""
+msgstr " / "
 
 #: kdvi.cpp:905
 msgid "Large text button set to shrink factor "
@@ -473,7 +471,7 @@ msgstr "Маленький текст на кнопках с коэффициентом растяжения "
 #: kdvi.cpp:931
 #, c-format
 msgid "Shrink: %d"
-msgstr ""
+msgstr "Уменьшение: %d"
 
 #: marklist.cpp:37
 msgid "Mark current"
@@ -685,11 +683,11 @@ msgstr "Добавить"
 
 #: printSetupData.cpp:119
 msgid "&Spooler command:"
-msgstr "Сомманда спулера:"
+msgstr "Команда спулера:"
 
 #: printSetupData.cpp:127
 msgid "n-up"
-msgstr ""
+msgstr "n-вверх"
 
 #: printSetupData.cpp:136
 msgid "Printing method"
