--- a/po/ru/kiconedit.po
+++ b/po/ru/kiconedit.po
@@ -1,35 +1,42 @@
+# Перевод kiconedit.
+# Copyright (C) 1998 Free Software Foundation, Inc.
+# Denis Pershin <dyp@inetlab.com>, 1998.
+#
 msgid ""
 msgstr ""
+"Project-Id-Version: kiconedit\n"
 "POT-Creation-Date: 1998-11-16 01:58+0100\n"
+"PO-Revision-Date: 1998-12-29 01:14+0600\n"
+"Last-Translator: Denis Pershin <dyp@inetlab.com>\n"
+"Language-Team: Russian <ru@li.org>\n"
+"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=koi8-r\n"
-"Date: 1998-07-31 11:38:54+0400\n"
-"From: Andy Pershin <apa@penza.com.ru>\n"
-"Xgettext-Options: -C -ktranslate -ki18n\n"
+"Content-Transfer-Encoding: 8-bit\n"
 
 #: utils.cpp:65
 #, c-format
 msgid "copyFile - There was an error opening destination file: %s"
-msgstr ""
+msgstr "copyFile - Ошибка открытия файла назначения: %s"
 
 #: utils.cpp:72
-#, fuzzy, c-format
+#, c-format
 msgid "copyFile - There was an error reading source file: %s"
-msgstr "Во время сохранения произошла ошибка:\n"
+msgstr "copyFile - Ошибка чтения исходного файла: %s"
 
 #: utils.cpp:80
-#, fuzzy, c-format
+#, c-format
 msgid "copyFile - There was an error writing to destination file: %s"
-msgstr "Во время сохранения произошла ошибка:\n"
+msgstr "copyFile - Ошибка записи файла назначения: %s"
 
 #: utils.cpp:93
 #, c-format
 msgid "copyFile - There was an error opening source file: %s"
-msgstr ""
+msgstr "copyFile - Ошибка открытия исходного файла: %s"
 
 #: utils.cpp:105
-#, fuzzy, c-format
+#, c-format
 msgid "removeFile - There was an error removing the file: %s"
-msgstr "Во время сохранения произошла ошибка:\n"
+msgstr "removeFile - Ошибка удаления файла: %s"
 
 #: kiconedit.cpp:239 kiconeditslots.cpp:62 kiconeditslots.cpp:121
 msgid ""
@@ -40,28 +47,24 @@ msgstr ""
 "Вы не хотите его сохранить?"
 
 #: kiconedit.cpp:373
-#, fuzzy
 msgid "Select All"
-msgstr "Выбрать область"
+msgstr "Выбрать все"
 
 #: kiconedit.cpp:391
-#, fuzzy
 msgid "New &Window"
 msgstr "Новое окно"
 
 #: kiconedit.cpp:396
-#, fuzzy
 msgid "&New..."
-msgstr "Новый"
+msgstr "Новый..."
 
 #: kiconedit.cpp:402
 msgid "Open recent"
-msgstr ""
+msgstr "Открыть недавнее"
 
 #: kiconedit.cpp:423
-#, fuzzy
 msgid "&Exit"
-msgstr "Редактировать"
+msgstr "Выход"
 
 #: kiconedit.cpp:431
 msgid "Cu&t"
@@ -69,28 +72,27 @@ msgstr "Вырезать"
 
 #: kiconedit.cpp:440
 msgid "Paste as &new"
-msgstr ""
+msgstr "Вставить как новое"
 
 #: kiconedit.cpp:443
 msgid "Clea&r"
 msgstr "Очистить"
 
 #: kiconedit.cpp:447
-#, fuzzy
 msgid "Select &all"
-msgstr "Выбрать область"
+msgstr "Выбрать все"
 
 #: kiconedit.cpp:454
 msgid "1:1"
-msgstr ""
+msgstr "1:1"
 
 #: kiconedit.cpp:455
 msgid "1:5"
-msgstr ""
+msgstr "1:5"
 
 #: kiconedit.cpp:456
 msgid "1:10"
-msgstr ""
+msgstr "1:10"
 
 #: kiconedit.cpp:461
 msgid "Zoom &in"
@@ -101,21 +103,20 @@ msgid "Zoom &out"
 msgstr "Уменьшить"
 
 #: kiconedit.cpp:463
-#, fuzzy
 msgid "Zoom factor"
-msgstr "Уменьшить"
+msgstr "Степень увеличения"
 
 #: kiconedit.cpp:470
 msgid "&Resize"
-msgstr ""
+msgstr "Изменить размер"
 
 #: kiconedit.cpp:472
 msgid "&GrayScale"
-msgstr ""
+msgstr "Полутоновое"
 
 #: kiconedit.cpp:477
 msgid "&Icon"
-msgstr ""
+msgstr "Пиктограмма"
 
 #: kiconedit.cpp:481
 msgid "Freehand"
@@ -134,18 +135,16 @@ msgid "Circle"
 msgstr "Окружность"
 
 #: kiconedit.cpp:485
-#, fuzzy
 msgid "Filled circle"
-msgstr "Закрашенный прямоугольник"
+msgstr "Закрашенный круг"
 
 #: kiconedit.cpp:486
 msgid "Ellipse"
 msgstr "Эллипс"
 
 #: kiconedit.cpp:487
-#, fuzzy
 msgid "Filled ellipse"
-msgstr "Закрашенный прямоугольник"
+msgstr "Закрашенный эллипс"
 
 #: kiconedit.cpp:488 kiconedit.cpp:686
 msgid "Spray"
@@ -169,30 +168,27 @@ msgstr "Инструменты"
 
 #: kiconedit.cpp:498
 msgid "&Configure"
-msgstr ""
+msgstr "Настроить"
 
 #: kiconedit.cpp:500
 msgid "Toggle &Grid"
 msgstr "Сетка"
 
 #: kiconedit.cpp:503
-#, fuzzy
 msgid "Toggle &toolbar"
-msgstr "Сетка"
+msgstr "Показать/Скрыть панель инструментов"
 
 #: kiconedit.cpp:506
-#, fuzzy
 msgid "Toggle &drawing tools"
-msgstr "Сетка"
+msgstr ""
 
 #: kiconedit.cpp:509
-#, fuzzy
 msgid "Toggle &statusbar"
-msgstr "Сетка"
+msgstr "Показать/Скрыть строку статуса"
 
 #: kiconedit.cpp:513
 msgid "&Save options"
-msgstr ""
+msgstr "Сохранить настройки"
 
 #: kiconedit.cpp:569
 msgid "What is ...?"
@@ -221,11 +217,11 @@ msgstr "Выбрать область"
 
 #: kiconedit.cpp:611
 msgid "Resize"
-msgstr ""
+msgstr "Изменить размер"
 
 #: kiconedit.cpp:614
 msgid "GrayScale"
-msgstr ""
+msgstr "Полутоновое"
 
 #: kiconedit.cpp:621
 msgid "Zoom out"
@@ -240,7 +236,6 @@ msgid "Toggle grid"
 msgstr "Переключить сетку"
 
 #: kiconedit.cpp:639
-#, fuzzy
 msgid "New Window"
 msgstr "Новое окно"
 
@@ -269,18 +264,16 @@ msgid "Draw circle"
 msgstr "Рисовать окружность"
 
 #: kiconedit.cpp:680
-#, fuzzy
 msgid "Draw filled circle"
-msgstr "Рисовать залитый прямоугольник"
+msgstr "Рисовать залитый круг"
 
 #: kiconedit.cpp:682
 msgid "Draw ellipse"
 msgstr "Рисовать эллипс"
 
 #: kiconedit.cpp:684
-#, fuzzy
 msgid "Draw filled ellipse"
-msgstr "Рисовать эллипс"
+msgstr "Рисовать залитый эллипс"
 
 #: kiconedit.cpp:691
 msgid "Erase"
@@ -500,52 +493,58 @@ msgid ""
 msgstr ""
 
 #: kiconedit.cpp:885
-#, fuzzy
 msgid ""
 "Rectangle\n"
 "\n"
 "Draw a rectangle"
-msgstr "Рисовать прямоугольник"
+msgstr "Прямоугольник\n"
+"\n"
+"Рисовать прямоугольник"
 
 #: kiconedit.cpp:888
-#, fuzzy
 msgid ""
 "Filled rectangle\n"
 "\n"
 "Draw a filled rectangle"
-msgstr "Рисовать залитый прямоугольник"
+msgstr "Залитый прямоугольник\n"
+"\n"
+"Рисовать залитый прямоугольник"
 
 #: kiconedit.cpp:891
-#, fuzzy
 msgid ""
 "Circle\n"
 "\n"
 "Draw a circle"
-msgstr "Рисовать окружность"
+msgstr "Окружность\n"
+"\n"
+"Рисовать окружность"
 
 #: kiconedit.cpp:894
-#, fuzzy
 msgid ""
 "Filled circle\n"
 "\n"
 "Draw a filled circle"
-msgstr "Рисовать залитый прямоугольник"
+msgstr "Закрашенная окружность\n"
+"\n"
+"Рисовать закрашенную окружность"
 
 #: kiconedit.cpp:897
-#, fuzzy
 msgid ""
 "Ellipse\n"
 "\n"
 "Draw an ellipse"
-msgstr "Рисовать эллипс"
+msgstr "Эллипс\n"
+"\n"
+"Рисовать эллипс"
 
 #: kiconedit.cpp:900
-#, fuzzy
 msgid ""
 "Filled ellipse\n"
 "\n"
 "Draw a filled ellipse"
-msgstr "Рисовать эллипс"
+msgstr "Закрашенный эллипс\n"
+"\n"
+"Рисовать закрашенный эллипс"
 
 #: kiconedit.cpp:903
 msgid ""
@@ -579,35 +578,32 @@ msgid ""
 msgstr ""
 
 #: kicongrid.cpp:684
-#, fuzzy
 msgid "There was an error loading a blank image.\n"
-msgstr "Произошла ошибка во время загрузки:\n"
+msgstr "Произошла ошибка во время загрузки пустого изображения.\n"
 
 #: kicongrid.cpp:830
 msgid "All selected"
-msgstr ""
+msgstr "Все выделено"
 
 #: kicongrid.cpp:841
-#, fuzzy
 msgid "Cleared"
-msgstr "Очистить"
+msgstr "Очищено"
 
 #: kicongrid.cpp:883
-#, fuzzy
 msgid "Selected area cutted"
-msgstr "Выбрать область"
+msgstr "Выбранная область перемещена в буфер обмена"
 
 #: kicongrid.cpp:886
-#, fuzzy
 msgid "Selected area copied"
-msgstr "Выбрать область"
+msgstr "Выбранная область помещена в буфер обмена"
 
 #: kicongrid.cpp:964
-#, fuzzy
 msgid ""
 "There was an copying:\n"
 "to the clipboard!"
-msgstr "Произошло копирование:\n"
+msgstr 
+"Произошло копирование\n"
+"В буфер обмена!"
 
 #: kicongrid.cpp:985
 msgid ""
@@ -616,13 +612,12 @@ msgid ""
 msgstr ""
 
 #: kicongrid.cpp:998
-#, fuzzy
 msgid "Pasting"
-msgstr "Вставить"
+msgstr "Вставляю"
 
 #: kicongrid.cpp:1030 kicongrid.cpp:1057
 msgid "Done pasting"
-msgstr ""
+msgstr "Вставлено"
 
 #: kicongrid.cpp:1035 kicongrid.cpp:1061
 msgid "Invalid pixmap data in clipboard!\n"
@@ -641,31 +636,28 @@ msgid "Name"
 msgstr ""
 
 #: kicondetaillist.cpp:52
-#, fuzzy
 msgid "Size"
-msgstr "Размер:"
+msgstr "Размер"
 
 #: kicondetaillist.cpp:55
 msgid "Permissions"
-msgstr ""
+msgstr "Права"
 
 #: kicondetaillist.cpp:57
-#, fuzzy
 msgid "Date"
-msgstr "Вставить"
+msgstr "Дата"
 
 #: kicondetaillist.cpp:60
 msgid "Owner"
-msgstr ""
+msgstr "Владелец"
 
 #: kicondetaillist.cpp:62
 msgid "Group"
-msgstr ""
+msgstr "Группа"
 
 #: kicon.cpp:48
-#, fuzzy
 msgid "There was an error removing temporary backup file:\n"
-msgstr "Во время сохранения произошла ошибка:\n"
+msgstr "Ошибка удаления временного файла:\n"
 
 #: kicon.cpp:74 kicon.cpp:258 kicon.cpp:342 kicon.cpp:445
 msgid ""
@@ -686,7 +678,7 @@ msgstr ""
 #: kicon.cpp:100 kicon.cpp:146 kicon.cpp:169 kicon.cpp:181 kicon.cpp:194
 #: kicon.cpp:207 kicon.cpp:218 kicon.cpp:399 kicon.cpp:432
 msgid "ERROR"
-msgstr ""
+msgstr "ОШИБКА"
 
 #: kicon.cpp:116
 msgid "The KDE Icon Editor has found a recover file for:\n"
@@ -699,9 +691,8 @@ msgid ""
 msgstr ""
 
 #: kicon.cpp:143
-#, fuzzy
 msgid "The file:\n"
-msgstr "Сохранить файл"
+msgstr "Файл:\n"
 
 #: kicon.cpp:145
 msgid ""
