--- a/po/pt_BR/kdvi.po
+++ b/po/pt_BR/kdvi.po
@@ -60,12 +60,11 @@ msgstr "Problema no DVI!\n"
 
 #: dviwin.cpp:508
 msgid "File status changed."
-msgstr ""
+msgstr "Status do arquivo mudou."
 
 #: dviwin.cpp:513 kdvi.cpp:937
-#, fuzzy
 msgid "File reloaded."
-msgstr "Arquivo recarregado"
+msgstr "Arquivo recarregado."
 
 #: kdvi.cpp:93
 msgid "No document"
@@ -462,9 +461,8 @@ msgid "Small text button set to shrink factor "
 msgstr "Botão de texto pequeno ajustado para o fator de redução"
 
 #: kdvi.cpp:931
-#, fuzzy, c-format
 msgid "Shrink: %d"
-msgstr "Reduzir: xx"
+msgstr "Reduzir: %d"
 
 #: marklist.cpp:37
 msgid "Mark current"
